--- a/DNN/multiclassification.ipynb
+++ b/DNN/multiclassification.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "n général, lorsque les classes dans un dataset ne peuvent pas être séparées par une simple ligne droite, le problème nécessite une fonction non linéaire pour la séparation. Cela est particulièrement vrai lorsque les classes sont mélangées ou présentent une structure complexe dans l'espace des features.\n",
+    "En général, lorsque les classes dans un dataset ne peuvent pas être séparées par une simple ligne droite, le problème nécessite une fonction non linéaire pour la séparation. Cela est particulièrement vrai lorsque les classes sont mélangées ou présentent une structure complexe dans l'espace des features.\n",
     "\n",
     "Dans notre cas, puisque nous avons généré les données avec make_blobs() avec 4 classes, il est fort probable que les classes ne soient pas linéairement séparables. Cela signifie qu'une fonction non linéaire sera probablement nécessaire pour séparer efficacement les classes dans cet ensemble de données.\n",
     "\n",
